Added error handler (try-catch) block
